deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: CICD_project
spec:
  selector:
    app: sample-app
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 8080
    loadBalancerPort: 30700
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: CICD_project
spec:
  selector:
    matchLabels:
      app: sample-app
  replicas: 2
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image:
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
